ZShare: premium fixed, fixes #614 JDUtilities: added getPluginForDecrypt Youtube: -rewrite and fixes -fixes #624 -fixes #358
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@8924 ebf7c1c2-ba36-0410-9fe8-c592906822b4